# MPFSS_Cuckoo

./: .gitignore  .gitlab-ci.yml  .gitlab_ci.yml  .gitmodules  BUILD  README.md  WORKSPACE  bazel-TI  bazel-bin  bazel-code_masterarbeit  bazel-genfiles  bazel-out  bazel-testlogs  log  log2  results_debug_mpfss_cuckoo_indices.txt  results_debug_mpfss_cuckoo_result.txt  run_cuckoo.cpp  run_cuckoo.py  run_cuckoo_docker.py  run_cuckoo_new_single_party_threads.cpp  run_cuckoo_single_party.cpp  run_cuckoo_single_party_threads.cpp  run_dpf.cpp  run_naive_threads.cpp  test  test2  todo
benchmark/: automatic_data_collection.py  big-table_beta.csv  big-table_cuckoo_new_vals.csv  big-table_cuckoo_new_valsp2.csv  big-table_cuckoo_old_vals.csv  big-table_cuckoo_old_valsp1.csv  big-table_cuckoo_threads.csv  big-table_dpfp1.csv  big-table_naive_new_vals.csv  big-table_naive_new_valsp1.csv  big-table_naive_new_valsp2.csv  big-table_naive_old_vals.csv  big-table_naive_old_valsp1.csv  big-table_naive_old_valsp2.csv  big-table_naive_rad.csv  big-table_naive_radp2.csv  big-table_naive_scaling.csv  big-table_naive_scalingscaling_lower.csv  big-table_naive_scalingscaling_lowerp1.csv  big-table_naive_scalingscaling_lowerp2.csv  data_evaluation.py  data_evaluation_n_to_time.py  eval_beta.py  parse_ping.py  plot_big_tabel.py  plot_big_tabel_threads-compare.py  plot_big_tabel_threads-dpf.py  plot_big_tabel_threads.py  plot_compare.py  plot_compare_loglog.py  plot_compare_loglog_3.py  plot_compare_loglog_4.py  plot_compare_n.py  plot_compare_scatter.py  plot_compare_size.py  plot_compare_threads.py  read_docker_output.py  read_docker_output_threads.py
code_master/: deps.bzl  preload.bzl
code_master/linreg/: BUILD  CMakeLists.txt  Makefile  linreg.c  linreg.h  linreg.oc  linreg.oh  protocolIO.c  protocolIO.h
includes/: BUILD  benchmark.cpp  benchmark.h  binary_search_tree.h  binary_search_tree_focused_batch_creation.oc  binary_search_tree_focused_batch_creation.oh  create_indices.c  create_indices.h  (+16 more)
(+462 files in other folders)
